# ChangeLog for media-video/vlc
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/vlc/ChangeLog,v 1.130 2005/12/27 06:25:58 flameeyes Exp $

  27 Dec 2005; Diego Pettenò <flameeyes@gentoo.org> vlc-0.8.2-r1.ebuild,
  vlc-0.8.2-r2.ebuild, vlc-0.8.4.ebuild, vlc-0.8.4-r1.ebuild,
  vlc-0.8.4a.ebuild:
  Change freetype useflag to truetype.

  17 Dec 2005; Diego Pettenò <flameeyes@gentoo.org> vlc-0.8.1-r1.ebuild,
  vlc-0.8.2-r1.ebuild, vlc-0.8.2-r2.ebuild, vlc-0.8.4.ebuild,
  vlc-0.8.4-r1.ebuild, vlc-0.8.4a.ebuild:
  Fix the dependency, for alsa is over alsa-lib, not virtual/alsa that points
  to the drivers. Close bug #115857.

*vlc-0.8.4a (13 Dec 2005)

  13 Dec 2005; Diego Pettenò <flameeyes@gentoo.org> +vlc-0.8.4a.ebuild:
  Updated VLC to 0.8.4a as released by upstream. Avahi and HAL patches are now
  part of vanilla sources.

  10 Dec 2005; Diego Pettenò <flameeyes@gentoo.org> vlc-0.8.4-r1.ebuild:
  Made modular-friendly.

  08 Dec 2005; Diego Pettenò <flameeyes@gentoo.org> vlc-0.8.4.ebuild,
  vlc-0.8.4-r1.ebuild:
  As per bug #113449, disable ability to build vlc with wxGTK built without
  unicode, as 2.6 version has non-experimental support, and vlc 0.8.4 seems to
  require it strictly.

  02 Dec 2005; Diego Pettenò <flameeyes@gentoo.org> vlc-0.8.4-r1.ebuild:
  Added patch from Giandomenico De Tullio for enabing avahi support on 0.6
  version and later, now bonjour support can be enabled on avahi greater than
  0.3. Install the (patched) desktop file from debian directory instead of
  creating a new one.

  01 Dec 2005; Diego Pettenò <flameeyes@gentoo.org> vlc-0.8.1-r1.ebuild:
  Changing dep for ffmpeg to any revision of 20050226 snapshot to avoid dummy
  people to use newer ffmpeg and filing tons of bugs without looking.

  30 Nov 2005; Diego Pettenò <flameeyes@gentoo.org> vlc-0.8.1-r1.ebuild:
  Completely remove nsplugin logic in vlc 0.8.1, too bugged.
